[EFL][WK2] MiniBrowser could not be launched on specific machine https://bugs.webkit.org/show_bug.cgi?id=105844

Reviewed by Gyuyoung Kim.

* UIProcess/Launcher/efl/ProcessLauncherEfl.cpp:
(WebKit::ProcessLauncher::launchProcess):
Modified to avoid bad use of temporary object.


Canonical link: https://commits.webkit.org/124041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138557 268f45cc-cd09-0410-ab3c-d52691b4dbfc